# SigmaFGM

./: .gitignore  AUTHORS.md  CMakeLists.txt  LICENSE.md  README.md  gitignore
.github/workflows/: cmake.yml
cmake/: make.sh  make_clean.sh  make_debug.sh
cmake/modules/: Config.h.in
example/: W1_numerical_analysis.R  W1_numerical_analysis.py  W3_numerical_analysis.py  lineage_plot.R  live_plot.R  numerical_analysis.py  plot.R  plot2D.py  plot_data.R  plot_numerical_integration_data.R  run.py  run_SigmaFGM_simulation.py  run_solver.py  run_solver.sh  simulation.py
example/num_int_save/: output_1_1.txt
example/old/: live_plot2D.py  make_movie.py  mu0.005sigma0.01.mpg  mu0.01.mpg
phenomics_analysis/: .Rapp.history  1_save_strain_names.py  2_xls_to_csv.py  3_merge_data.py  4_compute_interstrain_means.py  5_correct_data.py  6_center_and_scale_data.py  7_analysis.R  README.md  README.txt  analyze_data.R  estimate_intrastrain_data.py  generate_data.py  merge_estimated_data.py  run_analysis.sh  run_phenomics_analysis.sh  select_group_csv.py  strain_names.txt
phenomics_analysis/csv/: BY4743_1_actin_biological.csv  BY4743_1_conA_biological.csv  BY4743_1_dapi_biological.csv  BY4743_2_actin_biological.csv  BY4743_2_conA_biological.csv  BY4743_2_dapi_biological.csv  BY4743_3_actin_biological.csv  BY4743_3_conA_biological.csv  BY4743_3_dapi_biological.csv  BY4743_4_actin_biological.csv  BY4743_4_conA_biological.csv  BY4743_4_dapi_biological.csv  BY4743_5_actin_biological.csv  BY4743_5_conA_biological.csv  BY4743_5_dapi_biological.csv  CECT10109_1_actin_biological.csv  CECT10109_1_conA_biological.csv  CECT10109_1_dapi_biological.csv  CECT10109_2_actin_biological.csv  CECT10109_2_conA_biological.csv  CECT10109_2_dapi_biological.csv  CECT10109_3_actin_biological.csv  CECT10109_3_conA_biological.csv  CECT10109_3_dapi_biological.csv  CECT10109_4_actin_biological.csv  CECT10109_4_conA_biological.csv  CECT10109_4_dapi_biological.csv  CECT10109_5_actin_biological.csv  CECT10109_5_conA_biological.csv  CECT10109_5_dapi_biological.csv  CLIB154_1_actin_biological.csv  CLIB154_1_conA_biological.csv  CLIB154_1_dapi_biological.csv  CLIB154_2_actin_biological.csv  CLIB154_2_conA_biological.csv  CLIB154_2_dapi_biological.csv  CLIB154_3_actin_biological.csv  CLIB154_3_conA_biological.csv  CLIB154_3_dapi_biological.csv  CLIB154_4_actin_biological.csv  (+515 more)
src/: SigmaFGM_W1_numerical_analysis.cpp  SigmaFGM_W3_numerical_analysis.cpp  SigmaFGM_numerical_analysis.cpp  SigmaFGM_run.cpp  SigmaFGM_simulation.cpp  integration_step_QAGI.cpp  run_numerical_integration.py  run_numerical_integration_local.py  run_numerical_integration_old.py  run_solver.cpp  run_solver.py
src/lib/: Enums.h  Environment.cpp  Environment.h  Individual.cpp  Individual.h  Macros.h  Node.cpp  Node.h  NumericalAnalysis.cpp  NumericalAnalysis.h  Parameters.cpp  Parameters.h  Particle.cpp  Particle.h  Population.cpp  Population.h  Prng.cpp  Prng.h  Simulation.cpp  Simulation.h  Solver.cpp  Solver.h  Statistics.cpp  Statistics.h  Structs.h  Tree.cpp  Tree.h
